<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Client Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dstAddress">Destination IP address</string>
    <string name="dstPort">Destination port</string>
    <string name="defaultPort">50007</string>
    <string name="btnConnect">Connect</string>
    <string name="btnClear">Clear received message</string>

</resources>
